add config prompt